--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
+    "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-big-calendar": "^0.23.0",
